# wgpu-mandelbrot

./: Cargo.toml  index.html  package-lock.json
src/: lib.rs  main.rs  shader.wgsl  transforms.rs
