[package]
name = "wgpu-mandelbrot"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "Mandelbrot"
identifier = "com.jrmoulton.mandelbrot"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.16.1", features = ["derive"] }
kurbo = "0.11.0"
pollster = "0.3.0"
wgpu = { version = "22.0.0" }
winit = "0.30.4"
cfg-if = "1"
log = "0.4.22"
pretty_env_logger = "0.5.0"
futures = "0.3.30"
pretty_assertions = "1.4.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
